# openSage-deprecated

./: CMakeLists.txt  LICENSE  README.md
cmake/: Install.cmake  Packaging.cmake  Properties.cmake
cmake/Modules/: FindFFMPEG.cmake  FindGLI.cmake
src/: #main.cpp#  Audio.cpp  Audio.hpp  AudioSystem.cpp  AudioSystem.hpp  Config.cpp  Config.hpp  Engine.cpp  Engine.hpp  FileSystem.cpp  FileSystem.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  Video.cpp  Video.hpp  VideoSystem.cpp  VideoSystem.hpp  main.cpp
src/Game/: ActionScript.cpp  ActionScript.hpp  GameData.cpp  GameData.hpp  Handler.cpp  Handler.hpp  INI.cpp  INI.hpp
src/Graphics/: Renderable.hpp  Shader.cpp  Shader.hpp  Shape.cpp  Shape.hpp  Texture.cpp  Texture.hpp  Video.cpp  Video.hpp  flextGL.c  flextGL.h
src/Loaders/: AptFile.cpp  AptFile.hpp  BigStream.cpp  BigStream.hpp  Mp3Stream.cpp  Mp3Stream.hpp  Util.hpp  VP62.cpp  VP62.hpp  Vp6Stream.hpp  Vp6Streams.cpp
src/Script/: ActionScript.cpp  ActionScript.hpp
